ahmed Add a bottom navigation and Fragments

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black_2"
     tools:context=".ui.HomeActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/bottomNavigation"
+            android:id="@+id/fragmentContainer"/>
+
+        <com.etebarian.meowbottomnavigation.MeowBottomNavigation
+            android:id="@+id/bottomNavigation"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            app:mbn_circleColor="@color/black_1"
+            app:mbn_backgroundBottomColor="@color/black_1"
+            app:mbn_countBackgroundColor="#ff6f00"
+            app:mbn_defaultIconColor="#90a4ae"
+            app:mbn_selectedIconColor="@color/blue"
+            app:mbn_shadowColor="#1f212121"
+            android:layout_alignParentBottom="true"/>
+
+
+
+
+</RelativeLayout>
