--- a/app/src/main/res/drawable/ic_person.xml
+++ b/app/src/main/res/drawable/ic_person.xml
@@ -1,7 +1,7 @@
-<vector android:height="24dp" android:tint="#3F51B5"
+<vector android:height="24dp" android:tint="#E5E5E5"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/blue"
+    <path android:fillColor="@color/white"
         android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
 </vector>
