--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="blue">#246BFD</color>
     <color name="black_1">#222232</color>
     <color name="black_2">#181829</color>
+    <color name="black_3">#2B2B3D</color>
     <color name="gray_on">#C4C4C4</color>
     <color name="gray_off">#65656B</color>
     <color name="orange">#F4A58A</color>
